-
Bug
-
Resolution: Done
-
P4: Low
-
5.7.0, 5.7.1, 5.9.2
-
Windows/Vista style
-
3c20b9b97377172dd1fc384bd28d3c7dbff0f523 (qt/qtbase/5.15)
The scrollbar disappears from the QComboBox if QGLWidget is used. Sample below and project will be attached.
int main(int argc, char *argv[]) { QApplication app(argc, argv); QGraphicsView graphics_view; graphics_view.setFrameStyle(0); graphics_view.setViewport(new QGLWidget(QGLFormat(QGL::SampleBuffers))); graphics_view.setViewportUpdateMode(QGraphicsView::FullViewportUpdate); QGraphicsScene *scene = new QGraphicsScene; graphics_view.setScene(scene); QWidget window; QGraphicsProxyWidget* proxy = graphics_view.scene()->addWidget(&window); proxy->setPos(0, 0); proxy->setCacheMode(QGraphicsItem::NoCache); QComboBox* combo = new QComboBox(&window); for (int i = 0; i < 20; ++i) { combo->addItem(QString::number(i)); } QHBoxLayout* layout = new QHBoxLayout(&window); layout->addWidget(combo); window.setLayout(layout); graphics_view.show(); return app.exec(); }
For Gerrit Dashboard: QTBUG-63687 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
208656,2 | WIP: WindowsXPStyle: Do not draw directly on Widgets within QGraphicsView | dev | qt/qtbase | Status: NEW | -2 | 0 |
290909,2 | QGraphicsProxyWidgets: document that using OpenGL comes with limitations | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |